:crab: Arch linux is gone :crab:

--- a/modules/programs/kitty/kitty.conf
+++ b/modules/programs/kitty/kitty.conf
@@ -8,9 +8,9 @@ open_url_with default
 enable_audio_bell no
 url_style curly
 
-bold_italic_font Iosevka Term Bold Italic
-bold_font Iosevka Term Bold
-italic_font Iosevka Term Italic
+bold_italic_font Iosevka Term
+bold_font Iosevka Term
+italic_font Iosevka Term
 font_family Iosevka Term
 
 font_size 10.0
