--- a/modules/programs/waybar/config
+++ b/modules/programs/waybar/config
@@ -31,6 +31,7 @@
 			"3": "<span color=\"#89dceb\">󰍩 </span>",
 			"4": "<span color=\"#89dceb\"> </span>",
 			"5": "<span color=\"#89dceb\"> </span>",
+      "10": "<span color=\"#89dceb\"> </span>",
 			"default": "<span color=\"#89dceb\"> </span>"
 		}
 	},
