--- a/modules/programs/waybar/config
+++ b/modules/programs/waybar/config
@@ -3,10 +3,36 @@
 	"position": "top",
 	// "height": 30,
 	"spacing": 5,
-	"modules-left": ["sway/workspaces"],
-	"modules-center": ["sway/window"],
+	// "modules-left": ["sway/workspaces"],
+	// "modules-center": ["sway/window"],
+  "modules-left": ["hyprland/workspaces"],
+  "modules-center": ["hyprland/window"],
 	"modules-right": ["tray", "network", "clock"],
 	"exclusive": true,
+  "hyprland/window": {
+    "format": "{}",
+    "rewrite": {
+			"LibreWolf": "󰈹 ",
+			"(.*) — LibreWolf": "󰈹  - $1",
+      "(.*) - YouTube — LibreWolf" : "󰗃  - $1",
+			"nvim": "",
+			"Neovide": "",
+      "zsh": " "
+    }
+  },
+  "hyprland/workspaces": {
+    "active-only": true,
+    "format": "{icon}",
+    "format-icons": {
+			"1": "<span color=\"#cba6f7\"> </span>",
+			"2": "<span color=\"#cba6f7\"> </span>",
+			"3": "<span color=\"#cba6f7\">󰍩 </span>",
+			"4": "<span color=\"#cba6f7\"> </span>",
+			"5": "<span color=\"#cba6f7\"> </span>",
+      "10": "<span color=\"#cba6f7\"> </span>",
+			"default": "<span color=\"#cba6f7\"> </span>"
+    }
+  },
 	"sway/window": {
 		"format": "{}",
 		"max-length": "100",
