--- a/modules/waybar/config
+++ b/modules/waybar/config
@@ -5,8 +5,8 @@
 	"spacing": 5,
 	// "modules-left": ["sway/workspaces"],
 	// "modules-center": ["sway/window"],
-  "modules-left": ["hyprland/workspaces"],
-  "modules-center": ["hyprland/window"],
+  // "modules-left": ["hyprland/workspaces"],
+  // "modules-center": ["hyprland/window"],
 	"modules-right": ["tray", "network", "clock"],
 	"exclusive": true,
   "hyprland/window": {
