--- a/.forgejo/workflows/check.yml
+++ b/.forgejo/workflows/check.yml
@@ -18,4 +18,4 @@ jobs:
 
       - name: Run flake checks
         run: |
-          nix flake check
+          nix --extra-experimental-features "nix-command flakes" flake check
